# numstr

./: .pre-commit-config.yaml  .vimrc  .vimspector.json  README.md  dev-requirements.txt  pyproject.toml  string_conversion.py
src/numstr/: __init__.py  counting.py  floats.py
tests/: conftest.py  test_counting.py  test_floats.py
tests/resources/: roman_1_to_3999
